--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="assets/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="assets/custom.css">
-    <link rel="stylesheet" href="assets/slick.css">
-    <link rel="stylesheet" href="assets/slick-theme.css">
-    <link rel="stylesheet" href="assets/slick-theme.min.css">
-    <link rel="stylesheet" href="assets/slick.min.css">
+
 
 
 </head>
@@ -150,18 +147,87 @@
         </div>
     </div>
     <!-- Gallery -->
-    <!-- <div class="gallery">
+    <div class="gallery-slider">
         <div class="container">
-            <div class="gallery-slick">
-                <div><img src="images/1.jpeg" alt="gallery image"></div>
-                <div><img src="images/2.jpeg" alt="gallery image"></div>
-                <div><img src="images/3.jpeg" alt="gallery image"></div>
-                <div><img src="images/4.jpeg" alt="gallery image"></div>
-                <div><img src="images/5.jpeg" alt="gallery image"></div>
-                <div><img src="images/6.jpeg" alt="gallery image"></div>
+            <h3>Gallery</h3>
+            <div class="top-content">
+                <div id="carousel-example" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner row w-100 mx-auto">
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active no-gutter">
+                            <div class="panel-thumbnail coral-1">
+                                <img class="img-fluid img-coral" src="images/1.jpeg" alt="slide 1">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-2">
+                                <img class="img-fluid img-coral" src="images/2.jpeg" alt="slide 2">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-3">
+                                <img class="img-fluid img-coral" src="images/3.jpeg" alt="slide 3">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-4">
+                                <img class="img-fluid img-coral" src="images/4.jpeg" alt="slide 4">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-5">
+                                <img class="img-fluid img-coral" src="images/5.jpeg" alt="slide 5">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-6">
+                                <img class="img-fluid img-coral" src="images/6.jpeg" alt="slide 6">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-7">
+                                <img class="img-fluid img-coral" src="images/7.jpg" alt="slide 7">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-8">
+                                <img class="img-fluid img-coral" src="images/8.jpg" alt="slide 8">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-8">
+                                <img class="img-fluid img-coral" src="images/9.jpg" alt="slide 9">
+
+                            </div>
+                        </div>
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 no-gutter">
+                            <div class="panel-thumbnail coral-8">
+                                <img class="img-fluid img-coral" src="images/10.jpg" alt="slide 10">
+
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
+                        <img src="images/left-arrow.svg" class="slider-arrow" alt="arrow">
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-example" role="button" data-slide="next">
+                        <img src="images/right-arrow.svg" class="slider-arrow" alt="arrow">
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
+            <a href="gallery.html"><button class="btn btn-primary">Gallery</button></a>
         </div>
-    </div> -->
+    </div>
+
 
 
 
@@ -195,8 +261,7 @@
     <script src="assets/popper.min.js"></script>
     <script src="assets/bootstrap.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="assets/gallery-slick.js"></script>
-    <script src="assets/slick.min.js"></script>
+    <script src="assets/slider.js"></script>
 
 </body>
 
